--- a/hmall-service-user/src/main/resources/application.yml
+++ b/hmall-service-user/src/main/resources/application.yml
@@ -2,15 +2,15 @@ server:
   port: 8082
 spring:
   datasource:
-    url: jdbc:mysql://192.168.200.130:3306/hmall?useSSL=false&characterEncoding=UTF-8
+    url: jdbc:mysql://192.168.20.130:3306/hmall?useSSL=false&characterEncoding=UTF-8
     username: root
-    password: root
+    password: 1234
     driver-class-name: com.mysql.jdbc.Driver
   application:
     name: userservice
   cloud:
     nacos:
-      server-addr: 192.168.200.130:8848
+      server-addr: 192.168.20.130:8848
 mybatis-plus:
   type-aliases-package: com.hmall.item.pojo
   configuration:
